--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
@@ -25,6 +26,8 @@
     "node-cron": "^4.1.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.10",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.3",
+    "uuid4": "^2.0.3",
+    "uuidv4": "^6.2.13"
   }
 }
